Добавлен api отправки приватного сообщения, Рефакторинг проверки игнора
